--- a/ToDoDemo/Base.lproj/Main.storyboard
+++ b/ToDoDemo/Base.lproj/Main.storyboard
@@ -60,7 +60,7 @@
                             <outlet property="delegate" destination="Iwf-gf-bx8" id="I4g-k0-bcw"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="TgS-57-Cdf">
+                    <navigationItem key="navigationItem" title="TODO - (0)" id="TgS-57-Cdf">
                         <barButtonItem key="rightBarButtonItem" enabled="NO" systemItem="add" id="zvz-rH-zlI">
                             <connections>
                                 <action selector="addButtonPressed:" destination="Iwf-gf-bx8" id="J8Y-KD-4Va"/>
